Add tbl Game Category GameCategory GameImage

--- a/Steam/appsettings.Development.json
+++ b/Steam/appsettings.Development.json
@@ -3,6 +3,9 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "ConnectionStrings": {
+      "MSSQLConnection": "Server=(localdb)\\mssqllocaldb;Database=SteamDatabase;Trusted_Connection=True;TrustServerCertificate=true;"
     }
   }
 }
