Update connection string

--- a/Steam/appsettings.json
+++ b/Steam/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "MSSQLConnection": "Server=(localdb)\\mssqllocaldb;Database=SteamDatabase;Trusted_Connection=True;TrustServerCertificate=true;"
+    "MSSQLConnection": "Server=DESKTOP-AKE41CN\\SQLEXPRESS;Database=SteamDatabase;Trusted_Connection=True;TrustServerCertificate=true;"
   },
   "AllowedHosts": "*"
 }
