--- a/Steam/appsettings.json
+++ b/Steam/appsettings.json
@@ -5,8 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AllowedHosts": "*",
   "ConnectionStrings": {
     "MSSQLConnection": "Server=(localdb)\\mssqllocaldb;Database=SteamDatabase;Trusted_Connection=True;TrustServerCertificate=true;"
   },
-  "AllowedHosts": "*"
+  "JwtSecretKey": "adlfjalUIYUuihafy34987432lNLJLhfasify93shfRQR##%^#&&^%@#$!sljdfl33"
+
 }
