--- a/Steam/appsettings.json
+++ b/Steam/appsettings.json
@@ -7,8 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MSSQLConnection": "Server=(localdb)\\mssqllocaldb;Database=SteamDatabase;Trusted_Connection=True;TrustServerCertificate=true;"
+    "PostgreSQLConnection": "Host=4.232.129.247;Port=5022;Database=steam;Username=krot;Password=p%rSDj4Iytmds07djc**dmUntdOidd3dZ_WTi4B9Zo"
   },
   "JwtSecretKey": "adlfjalUIYUuihafy34987432lNLJLhfasify93shfRQR##%^#&&^%@#$!sljdfl33"
-
 }
